# Automated-Gun-Turrent

ROS_package/pan_tilt_mech/: CMakeLists.txt  package.xml  turret.rviz
ROS_package/pan_tilt_mech/config/: joint_names_pan_tilt_mech.yaml
ROS_package/pan_tilt_mech/launch/: display.launch  gazebo.launch
ROS_package/pan_tilt_mech/meshes/: TRIPOD.stl  base_link.STL  pan_link.STL
ROS_package/pan_tilt_mech/urdf/: pan_tilt_mech.gazebo  pan_tilt_mech.urdf  pan_tilt_mech_copy.urdf
ROS_package/pan_tilt_mech_control/: CMakeLists.txt  package.xml
ROS_package/pan_tilt_mech_control/launch/: pan_tilt_mech.launch
ROS_package/pan_tilt_mech_world/: CMakeLists.txt  package.xml
ROS_package/pan_tilt_mech_world/models/counter_sphere/: model.config  model.sdf
ROS_package/pan_tilt_mech_world/models/particle_sphere/: model.config  model.sdf
ROS_package/pan_tilt_mech_world/worlds/: pan_tilt_mech.world
pan_tilt_mech/: package.xml
pan_tilt_mech/launch/: display.launch  gazebo.launch
pan_tilt_mech/meshes/: tilt_link.STL
pan_tilt_mech/urdf/: pan_tilt_mech.csv
