<package format="2">
  <name>pan_tilt_mech</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for pan_tilt_mech</p>
    <p>This package contains configuration data, 3D models and launch files
for pan_tilt_mech robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <!-- <build_depend>controller_manager</build_depend> -->
  <build_export_depend>gazebo_ros</build_export_depend>
  <!-- <build_export_depend>controller_manager</build_export_depend> -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>controller_manager</depend>

  <export>
    <architecture_independent />
  </export>
</package>